Change writing main

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
     <title>Hyunjin</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+      <noscript><p>You need to enable JavaScript to run this app.<br />
+          iPhone: Settings -> Safari -> Advanced -> JavaScript</p>
+          <p>자바스크립트를 활성화 해주세요.<br />
+          아이폰: 설정 -> Safari -> 고급 -> JavaScript</p></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
