--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <title>Hyunjin</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TMNE1XC5K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7TMNE1XC5K');
+  </script>
   <body>
       <noscript><p>You need to enable JavaScript to run this app.<br />
           iPhone: Settings -> Safari -> Advanced -> JavaScript</p>
