--- a/public/index.html
+++ b/public/index.html
@@ -24,23 +24,39 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+      integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
+      crossorigin="anonymous"
+    ></script>
     <title>Hyunjin</title>
   </head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TMNE1XC5K"></script>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-8X1DYY8T5Q"
+  ></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
 
-    gtag('config', 'G-7TMNE1XC5K');
+    gtag('config', 'G-8X1DYY8T5Q')
   </script>
   <body>
-      <noscript><p>You need to enable JavaScript to run this app.<br />
-          iPhone: Settings -> Safari -> Advanced -> JavaScript</p>
-          <p>자바스크립트를 활성화 해주세요.<br />
-          아이폰: 설정 -> Safari -> 고급 -> JavaScript</p></noscript>
+    <noscript
+      ><p>
+        You need to enable JavaScript to run this app.<br />
+        iPhone: Settings -> Safari -> Advanced -> JavaScript
+      </p>
+      <p>
+        자바스크립트를 활성화 해주세요.<br />
+        아이폰: 설정 -> Safari -> 고급 -> JavaScript
+      </p></noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
